compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_external_module_constants.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 220
expression: output
---
----- Jumping from `src/app.rakun`

import example_module
fn main() {
  example_module.my_num
                     ↑ 
}

----- Jumped to `build/packages/hex/src/example_module.rakun`
pub const my_num = 1
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
