compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_external_module_records.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 406
expression: output
---
----- Jumping from `src/app.rakun`

import example_module
fn main() {
  example_module.Var1(1)
                   ↑    
}

----- Jumped to `build/packages/hex/src/example_module.rakun`

pub record Rec {
  Var1(Int)
  ↑▔▔▔▔▔▔▔▔
  Var2(Int, Int)
}
