compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_from_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 624
expression: output
---
----- Jumping from `src/app.rakun`

pub type Wibble

pub fn main() {
  fn(w: Wibble) { todo }
         ↑              
}

----- Jumped to `src/app.rakun`

pub type Wibble
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
  fn(w: Wibble) { todo }
}
