compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_import_aliased.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.rakun`

import example_module as example
                          ↑     
fn main() {
  example.my_num
}

----- Jumped to `src/example_module.rakun`
pub const my_num = 1
↑
