compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_imported_module_constants.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 133
expression: output
---
----- Jumping from `src/app.rakun`

import example_module
fn main() {
  example_module.my_num
                 ↑     
}

----- Jumped to `src/example_module.rakun`
pub const my_num = 1
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
