compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__definition__goto_definition_local_variable.snap
---
source: compiler-core/src/language_server/tests/definition.rs
assertion_line: 69
expression: output
---
----- Jumping from `src/app.rakun`

pub fn main() {
  let x = 1
  x
  ↑
}

----- Jumped to `src/app.rakun`

pub fn main() {
  let x = 1
      ↑    
  x
}
